Added collection functionality for the summary tab
